@@ -30,21 +30,22 @@
       <en>
       PCL 6 is optional
 
-Additional PDL: UFRII LT (<a href="http://de.software.canon-europe.com/software/0023676.asp?model=">UFRII/UFRII LT Printer Driver for Linux</a> according to a topic about iR2016 in forum <i>Printers from Canon</i>)<p>
+      Additional PDL: UFRII LT (&lt;a href=&quot;http://de.software.canon-europe.com/software/0023676.asp?model=&quot;&gt;UFRII/UFRII LT Printer Driver for Linux&lt;/a&gt; according to a topic about iR2016 in forum &lt;i&gt;Printers from Canon&lt;/i&gt;)&lt;p&gt;
 
-Setup (upon <i>guide-ufr2-1.3x.tar.gz</i> obtained from the link above):
-<pre>
+Setup (upon &lt;i&gt;guide-ufr2-1.3x.tar.gz&lt;/i&gt; obtained from the link above):
+&lt;pre&gt;
 install cndrvcups-common-1.30-1.i386.rpm cndrvcups-ufr2-1.30-1.i386.rpm
 restart cups
 lpadmin -p ir2018 -m CNCUPSIR2016ZK.ppd -v socket://canon_ip_address:9100 -E
 (Debian specific: rpms can be converted to debs by alien, however, the ppd file should be linked in /usr/share/ppd:
 ln -s ../cups/model/CNCUPSIR2016ZK.ppd /usr/share/ppd/ )
-</pre>
+&lt;/pre&gt;
 
 CNCUPSIR2016ZK means that the ppd for iR2016 works me also for iR2018!
 
 http://de.software.canon-europe.com/software/0023676.asp?model=
-      
+
+
       Foomatic entry made by PPDtoXML T/G 0.19 on 2008-09-03
       </en>
    </comments>
