@@ -31,10 +31,35 @@
        <description>Xerox WorkCentre 7345 v  3.  0.  4 Multifunction System</description>
      </snmp>
    </autodetect>
-   <functionality>A</functionality>
-   <driver>Postscript</driver>
+   <functionality>B</functionality>
+   <driver>hpijs</driver>
+   <drivers>
+     <driver>
+        <id>Postscript</id>
+     </driver>
+     <driver>
+        <id>Gutenprint</id>
+     </driver>
+     <driver>
+        <id>hpijs</id>
+     </driver>
+     <driver>
+        <id>ljet4</id>
+     </driver>
+     <driver>
+        <id>lj4dith</id>
+     </driver>
+     <driver>
+        <id>ljet4d</id>
+     </driver>
+     <driver>
+        <id>pxlmono</id>
+     </driver>
+   </drivers>
    <comments>
       <en>
+      HPIJS is the only driver that currently prints in colour.
+
       Throughput = 26
       
       Foomatic entry made by PPDtoXML T/G 0.18 on 2008-05-25
