@@ -1,7 +1,8 @@
 2008-09-05  Dafydd Crosby <dcrosby@userful.com>
 	* printer/Canon-imageRunner_2016.xml,
           printer/Canon-imageRunner_2020i.xml,
-          printer/Canon-imageRunner_C3200.xml:
+          printer/Canon-imageRunner_C3200.xml,
+	  printer/Xerox-WorkCentre_7345.xml:
 	  updated information
 
 2008-09-03  Dafydd Crosby <dcrosby@userful.com>
